# cadquery-test

./: README.md  pyproject.toml
examples/: box.py  box_with_hole.py  param_box.py
