[project]
name = "cadquery-test"
version = "0.1.0"
description = ""
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.10.13"
dependencies = [
  "vtk>=9.3.1",
  "cadquery-ocp>=7.7.2",
  "cadquery"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
